sintaxi.output
Terminals unused in grammar

    COMMENT
    COMMA
    SEMICOLON


State 0 conflicts: 1 shift/reduce, 13 reduce/reduce
State 8 conflicts: 1 shift/reduce, 6 reduce/reduce
State 10 conflicts: 11 shift/reduce
State 11 conflicts: 11 shift/reduce
State 12 conflicts: 11 shift/reduce
State 13 conflicts: 11 shift/reduce
State 14 conflicts: 1 shift/reduce, 11 reduce/reduce
State 16 conflicts: 1 shift/reduce, 12 reduce/reduce
State 29 conflicts: 1 shift/reduce, 13 reduce/reduce
State 30 conflicts: 1 shift/reduce, 11 reduce/reduce
State 32 conflicts: 1 shift/reduce, 6 reduce/reduce
State 34 conflicts: 11 shift/reduce
State 46 conflicts: 1 shift/reduce, 13 reduce/reduce
State 47 conflicts: 1 shift/reduce, 15 reduce/reduce
State 49 conflicts: 1 shift/reduce, 17 reduce/reduce
State 50 conflicts: 1 shift/reduce, 17 reduce/reduce
State 51 conflicts: 1 shift/reduce, 9 reduce/reduce
State 52 conflicts: 1 shift/reduce, 9 reduce/reduce
State 53 conflicts: 1 shift/reduce, 9 reduce/reduce
State 54 conflicts: 1 shift/reduce, 9 reduce/reduce
State 55 conflicts: 1 shift/reduce, 9 reduce/reduce
State 56 conflicts: 1 shift/reduce, 9 reduce/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce, 11 reduce/reduce
State 62 conflicts: 1 shift/reduce, 11 reduce/reduce
State 67 conflicts: 11 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: expressio_list

    2 expressio_list: expressio ENDLINE
    3               | expressio ENDLINE expressio_list
    4               | ε

    5 header: REPEAT OPERATION

    6 expressio: header DO expressio_list DONE
    7          | ID ASSIGN OPERATION
    8          | ID ASSIGN OPERATION MODE
    9          | ID ASSIGN OPERATION_BOOLEAN
   10          | ID_BOOL ASSIGN OPERATION_BOOLEAN
   11          | OPERATION MODE
   12          | OPERATION
   13          | OPERATION_BOOLEAN

   14 OPERATION: OPERATION PLUS OPERATION2
   15          | OPERATION MINUS OPERATION2
   16          | OPERATION2

   17 OPERATION2: ε
   18           | OPERATION2 MULTIPLY OPERATION3
   19           | OPERATION2 DIVIDE OPERATION3
   20           | OPERATION2 MOD OPERATION3
   21           | OPERATION3

   22 OPERATION3: OPERATION4 POWER OPERATION3
   23           | OPERATION4

   24 OPERATION4: ε
   25           | SIN OPERATION4
   26           | COS OPERATION4
   27           | TAN OPERATION4
   28           | LEN OPERATION4
   29           | SUBSTR OPEN_PARENTHESIS OPERATION4 OPERATION4 OPERATION4 CLOSED_PARENTHESIS
   30           | INTEGER
   31           | FLOAT
   32           | STRING
   33           | ID
   34           | MINUS ID
   35           | OPEN_PARENTHESIS OPERATION CLOSED_PARENTHESIS

   36 OPERATION_BOOLEAN: OPERATION_BOOLEAN OR OPERATION_BOOLEAN1
   37                  | OPERATION_BOOLEAN1

   38 OPERATION_BOOLEAN1: OPERATION_BOOLEAN2
   39                   | OPERATION_BOOLEAN1 AND OPERATION_BOOLEAN2

   40 OPERATION_BOOLEAN2: OPERATION_BOOLEAN3
   41                   | NOT OPERATION_BOOLEAN2

   42 OPERATION_BOOLEAN3: OPEN_PARENTHESIS OPERATION_BOOLEAN CLOSED_PARENTHESIS
   43                   | TRUE
   44                   | ID_BOOL
   45                   | FALSE
   46                   | OPERATION EQUAL OPERATION
   47                   | OPERATION NOT_EQUAL OPERATION
   48                   | OPERATION GREATER_EQUAL OPERATION
   49                   | OPERATION GREATER_THAN OPERATION
   50                   | OPERATION LESS_THAN OPERATION
   51                   | OPERATION LESS_EQUAL OPERATION


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <enter> (258) 30
    FALSE <boolean> (259) 45
    TRUE <boolean> (260) 43
    MODE <mode> (261) 8 11
    FLOAT <real> (262) 31
    ID <ident> (263) 7 8 9 33 34
    ID_BOOL <ident> (264) 10 44
    STRING <cadena> (265) 32
    REPEAT <sense_valor> (266) 5
    DO <sense_valor> (267) 6
    DONE <sense_valor> (268) 6
    COMMENT <sense_valor> (269)
    SUBSTR <sense_valor> (270) 29
    COMMA <sense_valor> (271)
    LEN <sense_valor> (272) 28
    SIN <sense_valor> (273) 25
    COS <sense_valor> (274) 26
    TAN <sense_valor> (275) 27
    AND <sense_valor> (276) 39
    OR <sense_valor> (277) 36
    NOT <sense_valor> (278) 41
    PLUS <sense_valor> (279) 14
    MINUS <sense_valor> (280) 15 34
    MULTIPLY <sense_valor> (281) 18
    DIVIDE <sense_valor> (282) 19
    MOD <sense_valor> (283) 20
    POWER <sense_valor> (284) 22
    CLOSED_PARENTHESIS <sense_valor> (285) 29 35 42
    OPEN_PARENTHESIS <sense_valor> (286) 29 35 42
    ASSIGN <sense_valor> (287) 7 8 9 10
    ENDLINE <sense_valor> (288) 2 3
    SEMICOLON <sense_valor> (289)
    GREATER_THAN <sense_valor> (290) 49
    GREATER_EQUAL <sense_valor> (291) 48
    LESS_THAN <sense_valor> (292) 50
    LESS_EQUAL <sense_valor> (293) 51
    EQUAL <sense_valor> (294) 46
    NOT_EQUAL <sense_valor> (295) 47


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    programa <sense_valor> (42)
        on left: 1
        on right: 0
    expressio_list <expr_list> (43)
        on left: 2 3 4
        on right: 1 3 6
    header <header> (44)
        on left: 5
        on right: 6
    expressio <expr_val> (45)
        on left: 6 7 8 9 10 11 12 13
        on right: 2 3
    OPERATION <expr_val> (46)
        on left: 14 15 16
        on right: 5 7 8 11 12 14 15 35 46 47 48 49 50 51
    OPERATION2 <expr_val> (47)
        on left: 17 18 19 20 21
        on right: 14 15 16 18 19 20
    OPERATION3 <expr_val> (48)
        on left: 22 23
        on right: 18 19 20 21 22
    OPERATION4 <expr_val> (49)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 22 23 25 26 27 28 29
    OPERATION_BOOLEAN <expr_val> (50)
        on left: 36 37
        on right: 9 10 13 36 42
    OPERATION_BOOLEAN1 <expr_val> (51)
        on left: 38 39
        on right: 36 37 39
    OPERATION_BOOLEAN2 <expr_val> (52)
        on left: 40 41
        on right: 38 39 41
    OPERATION_BOOLEAN3 <expr_val> (53)
        on left: 42 43 44 45 46 47 48 49 50 51
        on right: 40


State 0

    0 $accept: • programa $end

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 5
    ID_BOOL           shift, and go to state 6
    STRING            shift, and go to state 7
    REPEAT            shift, and go to state 8
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    $end           reduce using rule 4 (expressio_list)
    MODE           reduce using rule 17 (OPERATION2)
    MODE           [reduce using rule 24 (OPERATION4)]
    PLUS           reduce using rule 17 (OPERATION2)
    PLUS           [reduce using rule 24 (OPERATION4)]
    MINUS          [reduce using rule 17 (OPERATION2)]
    MINUS          [reduce using rule 24 (OPERATION4)]
    MULTIPLY       reduce using rule 17 (OPERATION2)
    MULTIPLY       [reduce using rule 24 (OPERATION4)]
    DIVIDE         reduce using rule 17 (OPERATION2)
    DIVIDE         [reduce using rule 24 (OPERATION4)]
    MOD            reduce using rule 17 (OPERATION2)
    MOD            [reduce using rule 24 (OPERATION4)]
    POWER          reduce using rule 24 (OPERATION4)
    ENDLINE        reduce using rule 17 (OPERATION2)
    ENDLINE        [reduce using rule 24 (OPERATION4)]
    GREATER_THAN   reduce using rule 17 (OPERATION2)
    GREATER_THAN   [reduce using rule 24 (OPERATION4)]
    GREATER_EQUAL  reduce using rule 17 (OPERATION2)
    GREATER_EQUAL  [reduce using rule 24 (OPERATION4)]
    LESS_THAN      reduce using rule 17 (OPERATION2)
    LESS_THAN      [reduce using rule 24 (OPERATION4)]
    LESS_EQUAL     reduce using rule 17 (OPERATION2)
    LESS_EQUAL     [reduce using rule 24 (OPERATION4)]
    EQUAL          reduce using rule 17 (OPERATION2)
    EQUAL          [reduce using rule 24 (OPERATION4)]
    NOT_EQUAL      reduce using rule 17 (OPERATION2)
    NOT_EQUAL      [reduce using rule 24 (OPERATION4)]
    $default       reduce using rule 17 (OPERATION2)

    programa            go to state 17
    expressio_list      go to state 18
    header              go to state 19
    expressio           go to state 20
    OPERATION           go to state 21
    OPERATION2          go to state 22
    OPERATION3          go to state 23
    OPERATION4          go to state 24
    OPERATION_BOOLEAN   go to state 25
    OPERATION_BOOLEAN1  go to state 26
    OPERATION_BOOLEAN2  go to state 27
    OPERATION_BOOLEAN3  go to state 28


State 1

   30 OPERATION4: INTEGER •

    $default  reduce using rule 30 (OPERATION4)


State 2

   45 OPERATION_BOOLEAN3: FALSE •

    $default  reduce using rule 45 (OPERATION_BOOLEAN3)


State 3

   43 OPERATION_BOOLEAN3: TRUE •

    $default  reduce using rule 43 (OPERATION_BOOLEAN3)


State 4

   31 OPERATION4: FLOAT •

    $default  reduce using rule 31 (OPERATION4)


State 5

    7 expressio: ID • ASSIGN OPERATION
    8          | ID • ASSIGN OPERATION MODE
    9          | ID • ASSIGN OPERATION_BOOLEAN
   33 OPERATION4: ID •

    ASSIGN  shift, and go to state 29

    $default  reduce using rule 33 (OPERATION4)


State 6

   10 expressio: ID_BOOL • ASSIGN OPERATION_BOOLEAN
   44 OPERATION_BOOLEAN3: ID_BOOL •

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 44 (OPERATION_BOOLEAN3)


State 7

   32 OPERATION4: STRING •

    $default  reduce using rule 32 (OPERATION4)


State 8

    5 header: REPEAT • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32

    DO        reduce using rule 17 (OPERATION2)
    DO        [reduce using rule 24 (OPERATION4)]
    PLUS      reduce using rule 17 (OPERATION2)
    PLUS      [reduce using rule 24 (OPERATION4)]
    MINUS     [reduce using rule 17 (OPERATION2)]
    MINUS     [reduce using rule 24 (OPERATION4)]
    MULTIPLY  reduce using rule 17 (OPERATION2)
    MULTIPLY  [reduce using rule 24 (OPERATION4)]
    DIVIDE    reduce using rule 17 (OPERATION2)
    DIVIDE    [reduce using rule 24 (OPERATION4)]
    MOD       reduce using rule 17 (OPERATION2)
    MOD       [reduce using rule 24 (OPERATION4)]
    POWER     reduce using rule 24 (OPERATION4)
    $default  reduce using rule 17 (OPERATION2)

    OPERATION   go to state 33
    OPERATION2  go to state 22
    OPERATION3  go to state 23
    OPERATION4  go to state 24


State 9

   29 OPERATION4: SUBSTR • OPEN_PARENTHESIS OPERATION4 OPERATION4 OPERATION4 CLOSED_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 34


State 10

   28 OPERATION4: LEN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32

    INTEGER           [reduce using rule 24 (OPERATION4)]
    FLOAT             [reduce using rule 24 (OPERATION4)]
    ID                [reduce using rule 24 (OPERATION4)]
    STRING            [reduce using rule 24 (OPERATION4)]
    SUBSTR            [reduce using rule 24 (OPERATION4)]
    LEN               [reduce using rule 24 (OPERATION4)]
    SIN               [reduce using rule 24 (OPERATION4)]
    COS               [reduce using rule 24 (OPERATION4)]
    TAN               [reduce using rule 24 (OPERATION4)]
    MINUS             [reduce using rule 24 (OPERATION4)]
    OPEN_PARENTHESIS  [reduce using rule 24 (OPERATION4)]
    $default          reduce using rule 24 (OPERATION4)

    OPERATION4  go to state 35


State 11

   25 OPERATION4: SIN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32

    INTEGER           [reduce using rule 24 (OPERATION4)]
    FLOAT             [reduce using rule 24 (OPERATION4)]
    ID                [reduce using rule 24 (OPERATION4)]
    STRING            [reduce using rule 24 (OPERATION4)]
    SUBSTR            [reduce using rule 24 (OPERATION4)]
    LEN               [reduce using rule 24 (OPERATION4)]
    SIN               [reduce using rule 24 (OPERATION4)]
    COS               [reduce using rule 24 (OPERATION4)]
    TAN               [reduce using rule 24 (OPERATION4)]
    MINUS             [reduce using rule 24 (OPERATION4)]
    OPEN_PARENTHESIS  [reduce using rule 24 (OPERATION4)]
    $default          reduce using rule 24 (OPERATION4)

    OPERATION4  go to state 36


State 12

   26 OPERATION4: COS • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32

    INTEGER           [reduce using rule 24 (OPERATION4)]
    FLOAT             [reduce using rule 24 (OPERATION4)]
    ID                [reduce using rule 24 (OPERATION4)]
    STRING            [reduce using rule 24 (OPERATION4)]
    SUBSTR            [reduce using rule 24 (OPERATION4)]
    LEN               [reduce using rule 24 (OPERATION4)]
    SIN               [reduce using rule 24 (OPERATION4)]
    COS               [reduce using rule 24 (OPERATION4)]
    TAN               [reduce using rule 24 (OPERATION4)]
    MINUS             [reduce using rule 24 (OPERATION4)]
    OPEN_PARENTHESIS  [reduce using rule 24 (OPERATION4)]
    $default          reduce using rule 24 (OPERATION4)

    OPERATION4  go to state 37


State 13

   27 OPERATION4: TAN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32

    INTEGER           [reduce using rule 24 (OPERATION4)]
    FLOAT             [reduce using rule 24 (OPERATION4)]
    ID                [reduce using rule 24 (OPERATION4)]
    STRING            [reduce using rule 24 (OPERATION4)]
    SUBSTR            [reduce using rule 24 (OPERATION4)]
    LEN               [reduce using rule 24 (OPERATION4)]
    SIN               [reduce using rule 24 (OPERATION4)]
    COS               [reduce using rule 24 (OPERATION4)]
    TAN               [reduce using rule 24 (OPERATION4)]
    MINUS             [reduce using rule 24 (OPERATION4)]
    OPEN_PARENTHESIS  [reduce using rule 24 (OPERATION4)]
    $default          reduce using rule 24 (OPERATION4)

    OPERATION4  go to state 38


State 14

   41 OPERATION_BOOLEAN2: NOT • OPERATION_BOOLEAN2

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    ID_BOOL           shift, and go to state 39
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    PLUS           reduce using rule 17 (OPERATION2)
    PLUS           [reduce using rule 24 (OPERATION4)]
    MINUS          [reduce using rule 17 (OPERATION2)]
    MINUS          [reduce using rule 24 (OPERATION4)]
    MULTIPLY       reduce using rule 17 (OPERATION2)
    MULTIPLY       [reduce using rule 24 (OPERATION4)]
    DIVIDE         reduce using rule 17 (OPERATION2)
    DIVIDE         [reduce using rule 24 (OPERATION4)]
    MOD            reduce using rule 17 (OPERATION2)
    MOD            [reduce using rule 24 (OPERATION4)]
    POWER          reduce using rule 24 (OPERATION4)
    GREATER_THAN   reduce using rule 17 (OPERATION2)
    GREATER_THAN   [reduce using rule 24 (OPERATION4)]
    GREATER_EQUAL  reduce using rule 17 (OPERATION2)
    GREATER_EQUAL  [reduce using rule 24 (OPERATION4)]
    LESS_THAN      reduce using rule 17 (OPERATION2)
    LESS_THAN      [reduce using rule 24 (OPERATION4)]
    LESS_EQUAL     reduce using rule 17 (OPERATION2)
    LESS_EQUAL     [reduce using rule 24 (OPERATION4)]
    EQUAL          reduce using rule 17 (OPERATION2)
    EQUAL          [reduce using rule 24 (OPERATION4)]
    NOT_EQUAL      reduce using rule 17 (OPERATION2)
    NOT_EQUAL      [reduce using rule 24 (OPERATION4)]
    $default       reduce using rule 17 (OPERATION2)

    OPERATION           go to state 40
    OPERATION2          go to state 22
    OPERATION3          go to state 23
    OPERATION4          go to state 24
    OPERATION_BOOLEAN2  go to state 41
    OPERATION_BOOLEAN3  go to state 28


State 15

   34 OPERATION4: MINUS • ID

    ID  shift, and go to state 42


State 16

   35 OPERATION4: OPEN_PARENTHESIS • OPERATION CLOSED_PARENTHESIS
   42 OPERATION_BOOLEAN3: OPEN_PARENTHESIS • OPERATION_BOOLEAN CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    ID_BOOL           shift, and go to state 39
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    PLUS                reduce using rule 17 (OPERATION2)
    PLUS                [reduce using rule 24 (OPERATION4)]
    MINUS               [reduce using rule 17 (OPERATION2)]
    MINUS               [reduce using rule 24 (OPERATION4)]
    MULTIPLY            reduce using rule 17 (OPERATION2)
    MULTIPLY            [reduce using rule 24 (OPERATION4)]
    DIVIDE              reduce using rule 17 (OPERATION2)
    DIVIDE              [reduce using rule 24 (OPERATION4)]
    MOD                 reduce using rule 17 (OPERATION2)
    MOD                 [reduce using rule 24 (OPERATION4)]
    POWER               reduce using rule 24 (OPERATION4)
    CLOSED_PARENTHESIS  reduce using rule 17 (OPERATION2)
    CLOSED_PARENTHESIS  [reduce using rule 24 (OPERATION4)]
    GREATER_THAN        reduce using rule 17 (OPERATION2)
    GREATER_THAN        [reduce using rule 24 (OPERATION4)]
    GREATER_EQUAL       reduce using rule 17 (OPERATION2)
    GREATER_EQUAL       [reduce using rule 24 (OPERATION4)]
    LESS_THAN           reduce using rule 17 (OPERATION2)
    LESS_THAN           [reduce using rule 24 (OPERATION4)]
    LESS_EQUAL          reduce using rule 17 (OPERATION2)
    LESS_EQUAL          [reduce using rule 24 (OPERATION4)]
    EQUAL               reduce using rule 17 (OPERATION2)
    EQUAL               [reduce using rule 24 (OPERATION4)]
    NOT_EQUAL           reduce using rule 17 (OPERATION2)
    NOT_EQUAL           [reduce using rule 24 (OPERATION4)]
    $default            reduce using rule 17 (OPERATION2)

    OPERATION           go to state 43
    OPERATION2          go to state 22
    OPERATION3          go to state 23
    OPERATION4          go to state 24
    OPERATION_BOOLEAN   go to state 44
    OPERATION_BOOLEAN1  go to state 26
    OPERATION_BOOLEAN2  go to state 27
    OPERATION_BOOLEAN3  go to state 28


State 17

    0 $accept: programa • $end

    $end  shift, and go to state 45


State 18

    1 programa: expressio_list •

    $default  reduce using rule 1 (programa)


State 19

    6 expressio: header • DO expressio_list DONE

    DO  shift, and go to state 46


State 20

    2 expressio_list: expressio • ENDLINE
    3               | expressio • ENDLINE expressio_list

    ENDLINE  shift, and go to state 47


State 21

   11 expressio: OPERATION • MODE
   12          | OPERATION •
   14 OPERATION: OPERATION • PLUS OPERATION2
   15          | OPERATION • MINUS OPERATION2
   46 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   47                   | OPERATION • NOT_EQUAL OPERATION
   48                   | OPERATION • GREATER_EQUAL OPERATION
   49                   | OPERATION • GREATER_THAN OPERATION
   50                   | OPERATION • LESS_THAN OPERATION
   51                   | OPERATION • LESS_EQUAL OPERATION

    MODE           shift, and go to state 48
    PLUS           shift, and go to state 49
    MINUS          shift, and go to state 50
    GREATER_THAN   shift, and go to state 51
    GREATER_EQUAL  shift, and go to state 52
    LESS_THAN      shift, and go to state 53
    LESS_EQUAL     shift, and go to state 54
    EQUAL          shift, and go to state 55
    NOT_EQUAL      shift, and go to state 56

    $default  reduce using rule 12 (expressio)


State 22

   16 OPERATION: OPERATION2 •
   18 OPERATION2: OPERATION2 • MULTIPLY OPERATION3
   19           | OPERATION2 • DIVIDE OPERATION3
   20           | OPERATION2 • MOD OPERATION3

    MULTIPLY  shift, and go to state 57
    DIVIDE    shift, and go to state 58
    MOD       shift, and go to state 59

    $default  reduce using rule 16 (OPERATION)


State 23

   21 OPERATION2: OPERATION3 •

    $default  reduce using rule 21 (OPERATION2)


State 24

   22 OPERATION3: OPERATION4 • POWER OPERATION3
   23           | OPERATION4 •

    POWER  shift, and go to state 60

    $default  reduce using rule 23 (OPERATION3)


State 25

   13 expressio: OPERATION_BOOLEAN •
   36 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1

    OR  shift, and go to state 61

    $default  reduce using rule 13 (expressio)


State 26

   37 OPERATION_BOOLEAN: OPERATION_BOOLEAN1 •
   39 OPERATION_BOOLEAN1: OPERATION_BOOLEAN1 • AND OPERATION_BOOLEAN2

    AND  shift, and go to state 62

    $default  reduce using rule 37 (OPERATION_BOOLEAN)


State 27

   38 OPERATION_BOOLEAN1: OPERATION_BOOLEAN2 •

    $default  reduce using rule 38 (OPERATION_BOOLEAN1)


State 28

   40 OPERATION_BOOLEAN2: OPERATION_BOOLEAN3 •

    $default  reduce using rule 40 (OPERATION_BOOLEAN2)


State 29

    7 expressio: ID ASSIGN • OPERATION
    8          | ID ASSIGN • OPERATION MODE
    9          | ID ASSIGN • OPERATION_BOOLEAN

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    ID_BOOL           shift, and go to state 39
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    MODE           reduce using rule 17 (OPERATION2)
    MODE           [reduce using rule 24 (OPERATION4)]
    PLUS           reduce using rule 17 (OPERATION2)
    PLUS           [reduce using rule 24 (OPERATION4)]
    MINUS          [reduce using rule 17 (OPERATION2)]
    MINUS          [reduce using rule 24 (OPERATION4)]
    MULTIPLY       reduce using rule 17 (OPERATION2)
    MULTIPLY       [reduce using rule 24 (OPERATION4)]
    DIVIDE         reduce using rule 17 (OPERATION2)
    DIVIDE         [reduce using rule 24 (OPERATION4)]
    MOD            reduce using rule 17 (OPERATION2)
    MOD            [reduce using rule 24 (OPERATION4)]
    POWER          reduce using rule 24 (OPERATION4)
    ENDLINE        reduce using rule 17 (OPERATION2)
    ENDLINE        [reduce using rule 24 (OPERATION4)]
    GREATER_THAN   reduce using rule 17 (OPERATION2)
    GREATER_THAN   [reduce using rule 24 (OPERATION4)]
    GREATER_EQUAL  reduce using rule 17 (OPERATION2)
    GREATER_EQUAL  [reduce using rule 24 (OPERATION4)]
    LESS_THAN      reduce using rule 17 (OPERATION2)
    LESS_THAN      [reduce using rule 24 (OPERATION4)]
    LESS_EQUAL     reduce using rule 17 (OPERATION2)
    LESS_EQUAL     [reduce using rule 24 (OPERATION4)]
    EQUAL          reduce using rule 17 (OPERATION2)
    EQUAL          [reduce using rule 24 (OPERATION4)]
    NOT_EQUAL      reduce using rule 17 (OPERATION2)
    NOT_EQUAL      [reduce using rule 24 (OPERATION4)]
    $default       reduce using rule 17 (OPERATION2)

    OPERATION           go to state 63
    OPERATION2          go to state 22
    OPERATION3          go to state 23
    OPERATION4          go to state 24
    OPERATION_BOOLEAN   go to state 64
    OPERATION_BOOLEAN1  go to state 26
    OPERATION_BOOLEAN2  go to state 27
    OPERATION_BOOLEAN3  go to state 28


State 30

   10 expressio: ID_BOOL ASSIGN • OPERATION_BOOLEAN

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    ID_BOOL           shift, and go to state 39
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    PLUS           reduce using rule 17 (OPERATION2)
    PLUS           [reduce using rule 24 (OPERATION4)]
    MINUS          [reduce using rule 17 (OPERATION2)]
    MINUS          [reduce using rule 24 (OPERATION4)]
    MULTIPLY       reduce using rule 17 (OPERATION2)
    MULTIPLY       [reduce using rule 24 (OPERATION4)]
    DIVIDE         reduce using rule 17 (OPERATION2)
    DIVIDE         [reduce using rule 24 (OPERATION4)]
    MOD            reduce using rule 17 (OPERATION2)
    MOD            [reduce using rule 24 (OPERATION4)]
    POWER          reduce using rule 24 (OPERATION4)
    GREATER_THAN   reduce using rule 17 (OPERATION2)
    GREATER_THAN   [reduce using rule 24 (OPERATION4)]
    GREATER_EQUAL  reduce using rule 17 (OPERATION2)
    GREATER_EQUAL  [reduce using rule 24 (OPERATION4)]
    LESS_THAN      reduce using rule 17 (OPERATION2)
    LESS_THAN      [reduce using rule 24 (OPERATION4)]
    LESS_EQUAL     reduce using rule 17 (OPERATION2)
    LESS_EQUAL     [reduce using rule 24 (OPERATION4)]
    EQUAL          reduce using rule 17 (OPERATION2)
    EQUAL          [reduce using rule 24 (OPERATION4)]
    NOT_EQUAL      reduce using rule 17 (OPERATION2)
    NOT_EQUAL      [reduce using rule 24 (OPERATION4)]
    $default       reduce using rule 17 (OPERATION2)

    OPERATION           go to state 40
    OPERATION2          go to state 22
    OPERATION3          go to state 23
    OPERATION4          go to state 24
    OPERATION_BOOLEAN   go to state 65
    OPERATION_BOOLEAN1  go to state 26
    OPERATION_BOOLEAN2  go to state 27
    OPERATION_BOOLEAN3  go to state 28


State 31

   33 OPERATION4: ID •

    $default  reduce using rule 33 (OPERATION4)


State 32

   35 OPERATION4: OPEN_PARENTHESIS • OPERATION CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32

    PLUS                reduce using rule 17 (OPERATION2)
    PLUS                [reduce using rule 24 (OPERATION4)]
    MINUS               [reduce using rule 17 (OPERATION2)]
    MINUS               [reduce using rule 24 (OPERATION4)]
    MULTIPLY            reduce using rule 17 (OPERATION2)
    MULTIPLY            [reduce using rule 24 (OPERATION4)]
    DIVIDE              reduce using rule 17 (OPERATION2)
    DIVIDE              [reduce using rule 24 (OPERATION4)]
    MOD                 reduce using rule 17 (OPERATION2)
    MOD                 [reduce using rule 24 (OPERATION4)]
    POWER               reduce using rule 24 (OPERATION4)
    CLOSED_PARENTHESIS  reduce using rule 17 (OPERATION2)
    CLOSED_PARENTHESIS  [reduce using rule 24 (OPERATION4)]
    $default            reduce using rule 17 (OPERATION2)

    OPERATION   go to state 66
    OPERATION2  go to state 22
    OPERATION3  go to state 23
    OPERATION4  go to state 24


State 33

    5 header: REPEAT OPERATION •
   14 OPERATION: OPERATION • PLUS OPERATION2
   15          | OPERATION • MINUS OPERATION2

    PLUS   shift, and go to state 49
    MINUS  shift, and go to state 50

    $default  reduce using rule 5 (header)


State 34

   29 OPERATION4: SUBSTR OPEN_PARENTHESIS • OPERATION4 OPERATION4 OPERATION4 CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 31
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 32
